Fix alignment issues with tokens

--- a/main.css
+++ b/main.css
@@ -64,29 +64,51 @@ svg {pointer-events: none;}
 #info_img {
     width: 250px; 
     height: 250px; 
-    position: relative;
-    overflow: hidden; /* Ensures any overflow is hidden */
-    /*border-radius: 100%; */
-    transition: width ease-in-out 0.2s, 
-    height ease-in-out 0.2s;
+    position: absolute;
+    left: 0px;
+    overflow: hidden;
+    border-radius: 100%;
+    transition: width ease-in-out 0.5s, 
+    height ease-in-out 0.5s,
+    left ease-in-out 0.5s;
+}
+#info_desc:not([focus="true"]) #info_img {
+    left: 25px;
 }
 #info_img_role {
     position: absolute;
-    top: 0; /* Align to top */
+    top: 0;
+    /* Center horizontally with this one weird trick! */
     left: 50%;
-    transform: translate(-50%, 0); /* Center horizontally */
-    width: 90%; /* Scale to 90% of div size */
-    height: 90%; /* Scale to 90% of div size */
-    object-fit: contain; /* Ensures it fits within the area without distortion */
+    transform: translate(-50%, 0);
+    width: 90%;
+    height: 90%;
+    object-fit: contain;
 }
-#info_visibility_shade {position: absolute; top: 0px; left: 0px; height: 250px; width: 250px; pointer-events: none; background-color: black; opacity: 0.5; border-radius: 100%; display: none; transition: width ease-in-out 0.2s, height ease-in-out 0.2s, left ease-in-out 0.2s;}
-#info_visibility_img {position: absolute; top: 0px; left: 0px; height: 250px; width: 250px; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: 60%; display: none; border-radius: 100%; transition: width ease-in-out 0.2s, height ease-in-out 0.2s, left ease-in-out 0.2s, padding ease-in-out 0.2s;}
+#info_visibility_shade {position: absolute; top: 0px; left: 0px; height: 250px; width: 250px; pointer-events: none; background-color: black; opacity: 0.5; border-radius: 100%; display: none; transition: width ease-in-out 0.5s, height ease-in-out 0.5s, left ease-in-out 0.5s;}
+#info_visibility_img {position: absolute; top: 0px; left: 0px; height: 250px; width: 250px; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: 60%; display: none; border-radius: 100%; transition: width ease-in-out 0.5s, height ease-in-out 0.5s, left ease-in-out 0.5s, padding ease-in-out 0.5s;}
 #info_desc:not([focus="true"]) #info_visibility_shade {width: 200px; height: 200px; left: 25px;}
 #info_box:is([hidden="hide"]) #info_visibility_shade {display: inherit;}
 #info_box:is([hidden="bluff"]) #info_visibility_shade {display: inherit;}
 #info_desc:not([focus="true"]) #info_visibility_img {width: 200px; height: 200px; left: 25px;}
 #info_box:is([hidden="hide"]) #info_visibility_img {display: inherit; background-image: url(assets/visibility_off_red.png);}
 #info_box:is([hidden="bluff"]) #info_visibility_img {display: inherit; background-image: url(assets/visibility_off_yellow.png);}
+
+#info_img_name {
+    position: absolute;
+    bottom: -30px;
+    display: block; 
+    color:rgb(192, 72, 72); 
+    font-size: 20pt; 
+    font-family: PiratesBay;
+    width: 250px;
+    text-align: center;
+    transition: bottom ease-in-out 0.5s;
+}
+#info_desc:not([focus="true"]) #info_img_name {
+    bottom: 20px;
+    
+}
 
 #info_title_field {height: 100px; position: absolute; top: 0px; left: 0px; color:rgb(211, 211, 211); font-size: 50pt; font-family: PiratesBay;}
 #info_name_field {position: absolute; top: 70px; left: 30px; color:rgb(192, 72, 72); font-size: 17pt; font-family: PiratesBay;}
